Avanzando con el proyecto.

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap');
 
-root{
-    --Light_red: hsl(0, 100%, 67%);
-    --Orangey_yellow: hsl(39, 100%, 56%);
-    --Green_teal: hsl(166, 100%, 37%);;
-    --Cobalt_blue: hsl(234, 85%, 45%);
-    --White: hsl(0, 0%, 100%);
-    --Pale_blue: hsl(221, 100%, 96%);
-    --Light_lavender: hsl(241, 100%, 89%);
-    --Dark_gray_blue: hsl(224, 30%, 27%);
-    --Light_slate_blue: hsl(252, 100%, 67%);
-    --Light_royal_blue:  hsl(241, 81%, 54%);
-    --Violet_blue: hsla(256, 72%, 46%, 1);
-    --Persian_blue: hsla(241, 72%, 46%, 0);
+:root{
+    --light-red: hsl(0, 100%, 67%);
+    --orangey-yellow: hsl(39, 100%, 56%);
+    --green-teal: hsl(166, 100%, 37%);
+    --cobalt-blue: hsl(234, 85%, 45%);
+    --white: hsl(0, 0%, 100%);
+    --pale-blue: hsl(221, 100%, 96%);
+    --light-lavender: hsl(241, 100%, 89%);
+    --dark-gray-blue: hsl(224, 30%, 27%);
+    --light-slate-blue: hsl(252, 100%, 67%);
+    --light-royal-blue: hsl(241, 81%, 54%);
+    --violet-blue: hsla(256, 72%, 46%, 1);
+    --persian-blue: hsla(241, 72%, 46%, 0);
 }
 
 *{
@@ -22,21 +22,113 @@ root{
     font-family: 'Hanken Grotesk', sans-serif;
 }
 
+p{
+    font-size: 18px;
+    color: var(--white);
+}
+
 body{
     background-color: var(--White);
 }
 
 /* -----------------Conenedor de la pagina------------------ */
+.container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/*------------------Contenedor principal---------------------*/
+.principal_info{
+    width: 100%;
+    height: 355px;
+    padding-top: 0px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: var(--violet-blue);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+
+.principal_info p{
+    color: var(--light-lavender);
+    margin-left: 15px;
+    font-size: 16px;
+}
+
+.principal_info h4{
+    color: var(--white);
+    font-size: 22px;
+}
 
 
 
+/* ----------------Circle----------------*/
+.circle{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 145px;
+    height: 145px;
+    border-radius: 50%;
+    background-color: var(--light-royal-blue);
+}
+
+.circle h1{
+    color: var(--white);
+    font-size: 50px;
+}
+
+.circle h4{
+    color: var(--light-lavender);
+}
 
 
+/*------------------Contenedor secundario--------------------*/
 
+.secondary_info{
+    width: 100%;
+    height: 460px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.summary{
+    width: 313px;
+    height: 15px;
+    margin: 20px 0px 0px 0px;
+}
 
+.box{
+    width: 320px;
+    height: 55px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    background-color: rgb(255, 247, 187);
+}
 
+.btn-continue{
+    width: 320px;
+    height: 48px;
+    color: var(--white);
+    background-color: var(--persian-blue);
+    border-radius: 15px;
+    
 
+}
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
