--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,6 @@ body{
     align-items: center;
     background: rgb(30,0,113);
     background: linear-gradient(0deg, rgba(30,0,113,1) 0%, rgba(138,85,251,1) 100%);
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
 }
 
 .principal_info p{
@@ -82,12 +80,15 @@ body{
 .red{
     color: var(--light-red);
 }
+
 .yellow{
     color: var(--orangey-yellow);
 }
+
 .green{
     color: var(--green-teal);
 }
+
 .blue{
     color: var(--cobalt-blue);
 }
@@ -172,7 +173,7 @@ body{
 }
 
 .btn-continue{
-    width: 340px;
+    width: 300px;
     height: 55px;
     border: none;
     margin-top: 20px;
@@ -180,7 +181,58 @@ body{
     color: var(--white);
     border-radius: 25px;
     background-color:rgb(41, 29, 82);
+    cursor: pointer;
 }
 
-.attribution { font-size: 11px; text-align: center; }
+.attribution { 
+    font-size: 11px; 
+    text-align: center;
+    margin-top: 60px;
+}
+
 .attribution a { color: hsl(228, 45%, 44%); }
+
+/*--------------------(600px)----------------------*/
+
+@media screen and (min-width: 700px){
+    
+    .container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    .principal_info{
+        display: flex;
+        max-width: 300px;
+        border-radius: 20px;
+        height: 425px;
+        margin-top: 100px;
+    }
+    
+    .principal_info p{
+        margin: 0;
+    }
+
+    .secondary_info{
+        max-width: 320px;
+        height: 425px;
+        margin: 100px 0px 0px 15px;
+        border-bottom-right-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+    .box{
+        width: 290px;
+        height: 49px;
+    }
+
+    .circle{
+        width: 168px;
+        height: 168px;
+    }
+    .summary{
+        font-size: 23px;
+        margin: 16px 0px 20px 25px;
+    }
+}
